appId: dev.ipf.whitenoise.android.maestrolab
---
- runFlow:
    when:
      visible:
        id: folder.conditionDone
    commands:
      - assertVisible:
          id: folder.conditionDone
          enabled: true
      - assertVisible:
          id: folder.mode
      - tapOn: Cancel
- assertNotVisible:
    id: folder.mode
- assertNotVisible:
    id: folder.conditionDone
