appId: dev.ipf.whitenoise.android.maestrolab
---
- assertVisible:
    id: '^(com.android.systemui|com.android.settings):id/(pinEntry|password_entry|lockPassword)$'
- tapOn:
    id: '^(com.android.systemui|com.android.settings):id/(pinEntry|password_entry|lockPassword)$'
- inputText: '${APP_LOCK_FIXTURE_PIN}'
- pressKey: Enter
- assertNotVisible:
    id: app.lock
