appId: dev.ipf.whitenoise.android.maestrolab
---
- runFlow: ../fixtures/open-fixture-profile-editor.yaml
- scrollUntilVisible:
    element:
      id: profile.name_field
    direction: DOWN
- assertVisible:
    id: profile.name_field
- tapOn:
    id: profile.name_field
- longPressOn:
    id: profile.name_field
- runFlow:
    when:
      visible: (?i)select all
    commands:
    - tapOn: (?i)select all
- assertVisible:
    id: profile.name_field
    focused: true
- eraseText: 100
- assertNotVisible:
    id: profile.name_field
    text: .+
