appId: dev.ipf.whitenoise.android.maestrolab
---
- runFlow: ../fixtures/open-named-smart-folder.yaml
- scrollUntilVisible:
    element:
      id: folder.presetRead
    direction: DOWN
- tapOn:
    id: folder.presetRead
- scrollUntilVisible:
    element:
      id: folder.condition.2
    direction: DOWN
- assertVisible:
    id: folder.condition.2
- assertVisible: '^Read status: No unread messages$'
