appId: dev.ipf.whitenoise.android.maestrolab
---
- assertVisible:
    id: com.android.permissioncontroller:id/permission_deny_and_dont_ask_again_button
- tapOn:
    id: com.android.permissioncontroller:id/permission_deny_and_dont_ask_again_button
- assertVisible:
    text: ^Scan QR Code$
- assertVisible:
    text: ^Camera Access Needed$
- assertVisible:
    id: qr_scanner.recovery
    enabled: true
    containsChild:
      text: ^Open settings$
