appId: dev.ipf.whitenoise.android.maestrolab
name: consent-default-close
---
- runFlow: ../fixtures/emulator-interruption.yaml
- assertVisible: "Help Improve White Noise"
- assertVisible: "Share usage"
- assertVisible: "Share diagnostic logs"
- tapOn: "Close"
- assertVisible: "Allow Maestro Test Lab to send you notifications[?]"
- tapOn:
    id: "com.android.permissioncontroller:id/permission_deny_button"
- assertVisible: "Maestro group"
- assertNotVisible: "Help Improve White Noise"
